--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.33",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-particles-js": "^2.12.2",
+    "react-icons": "^4.11.0",
+    "react-pacman": "^0.0.4",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
+    "router-dom": "^2.2.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
