--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
-    
     "react-router-dom": "^6.17.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-typed": "^1.2.0",
     "router-dom": "^2.2.11",
     "web-vitals": "^2.1.4"
