--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react": "^18.2.33",
+    "@types/react": "^18.2.38",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "react": "^18.2.0",
@@ -20,6 +20,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "react-typed": "^1.2.0",
     "router-dom": "^2.2.11",
     "web-vitals": "^2.1.4"
   },
